# customer_churn_predictor

./: CHANGELOG.md  README.md  justfile  pyproject.toml
.github/workflows/: pull_request_workflow.yml
configuration/: config.yaml  test_config.yaml
data/prediction/: sample.csv
docker/: Dockerfile
notebooks/: experiment_llm.ipynb  telco_customer_churn_eda.ipynb  telco_customer_churn_model_training.ipynb
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/887185653513794297/: meta.yaml
notebooks/mlruns/887185653513794297/0963be83f1e84296a4e7570d97ed2785/: meta.yaml
notebooks/mlruns/887185653513794297/16c504d8a91949d8bd4a06c4cb9b0eb4/: meta.yaml
notebooks/mlruns/887185653513794297/4a7d8f3bddaa4491b66f7ea62120891e/: meta.yaml
notebooks/mlruns/887185653513794297/8ea3b79ab26f42febeddd7dcb50b0a26/: meta.yaml
notebooks/mlruns/887185653513794297/badb652878614d0a9df6e0780827e340/: meta.yaml
notebooks/mlruns/887185653513794297/c02e5a8508c94a21bf5296cd97829e47/: meta.yaml
notebooks/mlruns/887185653513794297/d345e1e599c0487a9c217ce87d6f767b/: meta.yaml
notebooks/mlruns/models/Linear Regression/: meta.yaml
notebooks/mlruns/models/Logistic Regression/: meta.yaml
notebooks/mlruns/models/XGBoost/: meta.yaml
notebooks/mlruns/models/XGBoost/version-1/: meta.yaml
scripts/: pylint_lint.sh
src/data_preparation/: data_preparation.py  data_preparation_utils.py
src/general_utils/: general_utils.py
src/logging_module/: log_configuration.yaml  logging_module.py
src/model_deployment/: churn_predictor_rest_api.py
src/model_training/: model_training.py  model_training_utils.py
tests/: conftest.py  test_data_preparation.py  test_general_utils.py  test_logging_module.py  test_model_training.py
(+63 files in other folders)
