[tool.poetry]
name = "customer-churn-predictor"
version = "0.1.0"
description = "Develop an end-to-end solution for predicting customer churn for a subscription-based service."
authors = ["Simone Porreca <porrecasimone@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
