[tool.poetry]
name = "customer-churn-predictor"
version = "0.1.0"
description = "Develop an end-to-end solution for predicting customer churn for a subscription-based service."
authors = ["Simone Porreca <porrecasimone@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.1"


[tool.poetry.group.dev.dependencies]
pandas = "^2.2.2"
matplotlib = "^3.9.0"
numpy = "^1.26.4"
seaborn = "^0.13.2"
jupyterlab = "^4.2.1"
colorama = "^0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
